--- a/index.html
+++ b/index.html
@@ -638,19 +638,14 @@ In Version 11.5, when the DB2_HADR_ROS_AVOID_REPLAY_ONLY_WINDOW registry variabl
                        <p></p>
 <hr>
 
-<h3 class="null" style="display: block;margin: 0;padding: 0;color: #444444;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 150%;letter-spacing: normal;text-align: left;"><span style="font-size:20px"><span style="font-family:times new roman,times,baskerville,georgia,serif"><span style="color:#000000">Follow-us! -Stay up to date on the latest news from the Db2 team</span></span></span></h3>
+<h3 class="null" style="display: block;margin: 0;padding: 0;color: #444444;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 150%;letter-spacing: normal;text-align: left;"><span style="font-size:16px"><span style="font-family:times new roman,times,baskerville,georgia,serif"><span style="color:#000000">Follow-us! -Stay up to date on the latest news from the Db2 team</span></span></span></h3>
   
   <ul>
-  <a =href <span style="font-size:14px">
-    <li> IBM Support Community: (https://www.ibm.com/mysupport) </li>
-    <li> IBM DB2 Developerworks :(http://bit.ly/sig_Blog)  </li>
-    <li> IBM DB2 Chat Bubble (http://bit.ly/sig_forums) </li>
-    <li> IBM DB2 Twitter page (https://twitter.com/db2_support) </li>
-    <li>IBM DB2 Facebook page (https://www.facebook.com/DB2Support) </li>
-    <li>IBM Youtube Channel (http://bit.ly/sig_YouTube) </li>
-    <li> DeveloperWorks Answers (forum):https://developer.ibm.com/answers/topics/ </li>
-    </a>
-    </ul>
+ <li> </a> <a href="https://www.ibm.com/mysupport/">IBM Support Community</a> </li>
+<li> </a><a href="http://bit.ly/sig_Blog">IBM DB2 Developerworks</a> </li>
+<li> </a><a href="http://bit.ly/sig_forums">IBM DB2 Chat Bubble</a> </li>
+<li> </a><a href="http://bit.ly/sig_YouTube">IBM Youtube Channel</a> </li>
+</ul>
 
           
 
